Fixed table/toolbar alignment

--- a/ui/app/src/main/java/org/activityinfo/ui/client/table/view/FormTable.scss
+++ b/ui/app/src/main/java/org/activityinfo/ui/client/table/view/FormTable.scss
@@ -36,7 +36,8 @@
 .formtable__slide .toolbar {
   flex: none;
   padding-right: 1rem;
-  padding-left: 2rem;
+  padding-left: 1.25rem;
+  padding-top: 1.25rem;
 }
 
 // Contains the column options panel, the datatable, and the record panel,
@@ -48,6 +49,7 @@
   flex-direction: row;
   overflow: hidden;
   flex-grow: 1;
+  padding-left: 1.25rem;
 }
 
 
